bug:none - add ant "docs" target to generate documentaiton from tld. gets stored in build/docs. Still need to flesh out docs in the tld file though.
Copied from Perforce
 Change: 33478

--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,15 @@
 
     </path>
 
+
+    <target name="docs" depends="jar" description="build tld docs in build/docs directory">
+        <java fork="true" jar="jars/tlddoc.jar" failonerror="true">
+            <arg line="-d ${build.dir}/docs"/>
+            <arg value="${jarfile}"/>
+        </java>
+    </target>
+
+
     <target name="build-init">
         <mkdir dir="${build.dir}"/>
     </target>
